# Experimentos-Sprint-3

./: .gitignore  GUIA.md  README.md  main.py  manage.py  pyproject.toml  requirements.txt  settings.py  settings_test.py  urls.py  wsgi.py
.claude/: settings.json  settings.local.json
api_gateway/: services.py  urls.py  views.py
core/: asgi.py  settings.py  urls.py
data-faker/: credentials.txt  seed_data.py
experiments/: _common.py  _seed_postgres_only.py  locustfile_attacker.py  measure_asr1_detection.py  measure_asr2_failover.py  measure_graceful_degradation.py  measure_heartbeat_monitoring.py  measure_security_concurrent_dos.py  measure_security_ratelimit.py
generador_reportes/: apps.py  heartbeat.py  services.py  urls.py  views.py
monitor_servicios/: models.py  services.py  urls.py  views.py
monitor_trafico/: middleware.py  models.py  services.py  urls.py  views.py
recolector_inventarios/: 001_Initial.py  admin.py  apps.py  connectors.py  docs.md  heartbeat.py  models.py  services.py  urls.py  views.py
resultados-remotos/: curva_bloqueo_failures.csv  curva_bloqueo_stats.csv  curva_bloqueo_stats_history.csv  resultado_dos_desbl_failures.csv  resultado_dos_desbl_stats.csv  resultado_dos_desbl_stats_history.csv  resultado_dos_failures.csv  resultado_dos_stats.csv  resultado_dos_stats_history.csv
results/: analyze_results.py  resultado_dos_failures.csv  resultado_dos_stats.csv  resultado_dos_stats_history.csv
setups/: set-database-ip.sh  setup-app-server.sh  setup-credentials.sh  setup-dbs.sh
tests/: test_recolector.py
(+4 files in other folders)
